    Congdi 2.5-Inch USB 3.1 Type-C hard drive enclosures.
  * Add UDEV rule to fix the duplicate serial number issue for
    Insignia 2-Bay HDD docking stations.
  * Use `subtree_check` to reduce subtree attacks in the NFSv4
    pseudo file system export. This can be modified via the
    `OMV_NFSD_V4_PSEUDO_ROOT_OPTIONS` environment variable.
  * Issue #1813: Return the configured mount point for each file
    system in the `FileSystemMgmt::enumerateMountedFilesystems`
    RPC instead of the dynamically determined one.

 -- Volker Theile <volker.theile@openmediavault.org>   Mon, 19 Aug 2024 19:26:45 +0200

openmediavault (7.4.5-1) stable; urgency=low

  * Issue #1809: Add the ability to customize the apticron
    configuration file via environment variables.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Aug 2024 19:34:56 +0200

openmediavault (7.4.4-1) stable; urgency=low

  * Update locale files.
  * Get correct client IP in login message when system is behind
    a reverse proxy.
  * Rename `Diagnostics | Performance Statistics | Disk Usage` to
    `File System Usage` to differentiate with `Disk I/O`.
  * Issue #1635: Switch to `@siemens/ngx-datatable` component.
  * Issue #1799: Do not use a login shell in the cron script
    `openmediavault-update-smart-drivedb`.
  * Issue #1801: Support requesting multiple files from a remote
    host, e.g. `user@host:/dir1 :/dir2 :/dir3`, in rsync jobs.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 25 Jul 2024 11:37:57 +0200

openmediavault (7.4.3-1) stable; urgency=low

  * Make sure the Armbian default netplan configuration file
    does not break our netplan configuration.
  * Make the system accessible again via mDNS/Zeroconf after
    changing the system's hostname.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Jul 2024 19:40:18 +0200

openmediavault (7.4.2-2) stable; urgency=low

  * Make sure security packages are not hold back on several Debian