@@ -1,5 +1,0 @@
-version: "1.0"
-type: mkfs
-data:
-  text: "EXT3"
-  url: /storage/filesystems/ext3/create
